# opencli-py

./: .gitignore  README.md  pyproject.toml  run_daemon.py  test_baidu_news.py  test_daemon.py  test_daemon_http.py  test_debug.py  test_simple_api.py  test_step_by_step.py
docs/: IMPLEMENTATION_PLAN.md  SPEC.md
examples/: simple.py
opencli_py/: __init__.py  client.py  daemon.py  protocol.py
opencli_py/extension/: background.js  manifest.json
opencli_py/extension/icons/: README.txt
scripts/: baidu_scholar_opencli.py  cnki_kns_opencli.py
