[project]
name = "opencli-py"
version = "0.1.0"
description = "Minimal Python browser automation using Chrome Extension - zero dependencies!"
requires-python = ">=3.12"
authors = [
    { name = "Your Name" }
]
dependencies = [
    # Zero dependencies! Uses only Python standard library.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
